# alice-and-bob-platform

./: .gitignore  Dockerfile  README.md  app.yaml  boostrap.sh  docker-compose-prod.yaml  docker-compose.dev.yaml  docker-compose.services.yaml  docker-compose.yaml  entrypoint-celery-worker.sh  entrypoint-web.sh  pyproject.toml
.run/: Celery.run.xml  Populate Communities from EzyCourse.run.xml  Populate Courses from EzyCourse.run.xml  Populate Courses.run.xml  Populate Sells from EzyCourse.run.xml  Populate Sells.run.xml  Populate Students from EzyCourse.run.xml  Populate Users.run.xml  Sync Zoho with DB.run.xml
alicebob/: _db.py  celery_app.py  celerybeat-schedule.db  manage.py  web.py
alicebob/academy/: admin.old.py  admin.py  apps.py  decorators.py  models.py  signals.py  tasks.py  urls.py  webhooks.py
alicebob/alicebob/: asgi.py  settings.py  urls.py  wsgi.py
alicebob/alicebob_sdk/: __init__.py  celery_utils.py  decorators.py  mixing.py  models.py  notifications.py  notion.py  tasks.py  zoho.py
alicebob/authentication/: admin.py  models.py
alicebob/awesome_admin/: admin.py  apps.py  mixing.py  unfold_callbacks.py  views.py
alicebob/background_tasks/: tasks.py
alicebob/campaigns/: admin.py  models.py  scoring.py  signals.py  tasks.py  urls.py  webhooks.py
alicebob/ezycourse/: admin.py  apps.py  decorators.py  models.py  tasks.py  urls.py  webhooks.py
alicebob/news/: admin.py  models.py  tasks.py  urls.py  views.py
alicebob/sdk/: __init__.py  notifications.py  notion.py  text.py
alicebob/zoho/: admin.py  apps.py  models.py  sdk.py  signals.py  tasks.py
awesome_ezycourse/: README.md  __main__.py
awesome_ezycourse/pages/: A product purchased by your affiliate link 2.html  A product purchased by your affiliate link 3.html  Badge achivement.html  Booking Cancelled.html  Booking Confirmed Student.html  Booking Confirmed.html  Change email.html  Email verification.html  New enrollment.html  New mention.html  New post in channel.html  New post in post.html  New post.html  New purchase request.html  Password reset code.html  Student signup verification code.html  new-mention.html  verify your form submission.html  video comment.html
awesome_ezycourse/sdk/: __init__.py  (+5 more)
awesome_zohocrm/: README.md  auth.py  contacts.py  course_progress.py  entrypoint.py  interfaces.py  leads.py  products.py  purchase_orders.py
deployment/: gunicorn.conf.py  pg-ca-certificate.crt
examples/: inoreader-01.json  inoreader-02.json  inoreader-03.json  inoreader-api-security.json
ezycourse/: README.md  __main__.py
pruebas/: content.txt  crear_asistente.py  demo_api_zoho.py  ollama_pruebas.py  pruebas_openai.py  sonet.py  tests.py  zoho_auth.json  zoho_tests.py  zoho_tests_old.py  zoho_tokens
(+212 files in other folders)
