[tool.poetry]
name = "AliceBob"
version = "0.1.0"
description = ""
authors = ["Alice & Bob Yeam <hello@alicebob.io>"]
packages = [{ include = "alicebob"}, { include = "awesome_ezycourse"}, { include = "awesome_zohocrm"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notion-client = "^2.2.1"
lxml = "^5.3.0"
requests = "^2.32.3"
anthropic = "^0.39.0"
html2text-rs = "^0.2.0"
celery = {extras = ["django", "librabbitmq", "redis"], version = "^5.4.0"}
gevent = "^24.11.1"
gunicorn = "^23.0.0"
python-decouple = "^3.8"
orjson = "^3.10.11"
sentry-sdk = {extras = ["celery"], version = "^2.18.0"}
django = {extras = ["argon2"], version = "^5.1.3"}
click = "^8.1.7"
rich = "^13.9.4"
psycopg = {extras = ["binary"], version = "^3.2.3"}
dj-database-url = "^2.3.0"
uuid7 = "^0.1.0"
django-unfold = "^0.41.0"
django-import-export = "^4.3.1"
django-guardian = "^2.4.0"
django-simple-history = "^3.7.0"
django-celery-beat = "^2.7.0"
whitenoise = "^6.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
